[gd_scene load_steps=4 format=3 uid="uid://b22lr6ju474cf"]

[ext_resource type="Script" path="res://weapons/stick.gd" id="1_5fp4k"]

[sub_resource type="BoxMesh" id="BoxMesh_aonts"]
size = Vector3(0.1, 1, 0.1)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_wersh"]
points = PackedVector3Array(0.05, 0.479005, 0.05, -0.0579256, -0.507937, -0.0579256, -0.0579256, -0.507937, 0.0531637, 0.0531637, -0.507937, -0.0579256, -0.0579256, 0.507937, -0.0579256, -0.0579256, 0.507937, 0.0531637, 0.0531637, 0.507937, -0.0579256, 0.05, -0.479005, 0.05)

[node name="Stick" type="Node3D"]
script = ExtResource("1_5fp4k")

[node name="WeaponMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.299372, 0)
mesh = SubResource("BoxMesh_aonts")

[node name="StickHitBox" type="Area3D" parent="WeaponMesh"]
transform = Transform3D(1.1, 0, 0, 0, 1.1, 0, 0, 0, 1.1, 0, 0, 0)
collision_mask = 36
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="WeaponMesh/StickHitBox"]
shape = SubResource("ConvexPolygonShape3D_wersh")

[connection signal="body_entered" from="WeaponMesh/StickHitBox" to="." method="_on_stick_hit_box_body_entered"]
